style: Fix Findbugs issues
findbugs-fixes